--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -163,7 +163,7 @@ play_18 : "**No Active Voice Chat Found**\n\nTo use force play, there must be an
 
 
 #Playlist
-playlist_1 : "**Usage:** /play [Music Name or Youtube Link or Reply to Audio]\n\nIf you want to play Bot's Server Playlist! Press the button below."
+playlist_1 : "‹ ارسل كلمة للتشغيل ›"
 playlist_2 : "Getting your playlist. Please wait"
 playlist_3 : "You have no playlist on Bot's Server."
 playlist_4 : "Fetched Playlist:\n\n"
@@ -291,33 +291,33 @@ PL_B_11 : ""
 ST_B_1 : ""
 ST_B_2 : ""
 ST_B_3 : ""
-ST_B_4 : "📱 Dashboard"
-ST_B_5 : "▶️ Play Mode"
+ST_B_4 : ""
+ST_B_5 : ""
 ST_B_6 : ""
-ST_B_7 : "🔄 Clean Mode"
-ST_B_8 : "{0} Low Quality Audio"
-ST_B_9 : "{0} Medium Quality Audio"
-ST_B_10 : "{0} High Quality Audio"
-ST_B_11 : "{0} Low Quality Video"
-ST_B_12 : "{0} Medium Quality Video"
-ST_B_13 : "{0} High Quality Video"
-ST_B_14 : "✅ Enabled"
-ST_B_15 : "❌ Disabled"
-ST_B_16 : "👤 Admins"
-ST_B_17 : "👥 Everyone"
-ST_B_18 : "📋 Authorized Users Lists"
-ST_B_19 : "🔎 Search Mode"
-ST_B_20 : "✅ Direct"
-ST_B_21 : "✅ Inline"
-ST_B_22 : "👨‍⚖️ Admin Commands"
-ST_B_23 : "🏘 Group"
-ST_B_24 : "🏷 Channel"
-ST_B_25 : "🫂 Play Type"
-ST_B_26 : "🗑 Command Clean"
-ST_B_27 : "🧑‍🚀 Suggestion Mode"
+ST_B_7 : ""
+ST_B_8 : ""
+ST_B_9 : ""
+ST_B_10 : ""
+ST_B_11 : ""
+ST_B_12 : ""
+ST_B_13 : ""
+ST_B_14 : ""
+ST_B_15 : ""
+ST_B_16 : ""
+ST_B_17 : ""
+ST_B_18 : ""
+ST_B_19 : ""
+ST_B_20 : ""
+ST_B_21 : ""
+ST_B_22 : ""
+ST_B_23 : ""
+ST_B_24 : ""
+ST_B_25 : ""
+ST_B_26 : ""
+ST_B_27 : ""
 
 #Song
-SG_B_1 : "↗️ Open Private Chat"
+SG_B_1 : "‹ التنزيل داخل البوت فقط ›"
 SG_B_2 : "🔊 Audio"
 SG_B_3 : "🎥 Video"
 
