--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -75,7 +75,7 @@ admin_34 : "Failed to seek the current stream."
 
 # Start
 start_1 : "Thanks for having me in {0}.\n{1} is alive.\n\nFor any assistance or help, checkout our support group and channel."
-start_2 : "‹ بوت تشغيل الملفات في المحادثات والقنوات الصوتية ›\n\n‹ الازرار المتاحة في الأسفل ›\n\n‹ الأوامر ›"
+start_2 : "‹ بوت تشغيل الملفات في المحادثات والقنوات الصوتية ›\n\n‹ الازرار المتاحة في الأسفل ›"
 start_3 : "Welcome To {0}\n\nI don't need any **admin permission** to work ( until asked for ).\n\nAssistant Username:- @{1}\nAssistant ID:- {2}"
 start_4 : "{0}'s Owner[{1}] has just joined your chat."
 start_5 : "A member of {0}'s Sudo User[{1}] has just joined your chat."
@@ -84,31 +84,31 @@ start_7 : "**Blacklisted Chat**\n\nYou're chat has been blacklisted by the Bot. 
 
 # Help
 help_1 : "‹ قائمة تحكم الأزرار  ›\n \n ‹ التحكم الأساسي ›"
-help_2 : "Contact me in PM for help."
+help_2 : "‹ اضغط للمساعدة ›"
 
 # Settings
 setting_1 : ""
-setting_3 : "⁉️ What is This?\n\n1) Direct: Plays search queries directly. Use -v to play videos in direct mode.\n\n2) Inline: Returns Inline Markup Buttons for choosing between video & audio."
-setting_4 : "⁉️ What is This?\n\n👥 Everyone: Anyone can use admin commands(skip, pause, resume etc) present in this group.\n\n🙍 Admin Only: Only admins and authorized users can use admin commands."
-setting_5 : "No Authorized Users Found\n\nYou can allow any non-admin to use my admin commands by /auth and delete by using /unauth"
-setting_9 : "⁉️ What is This?\n\nWhen activated, Bot will delete its message after {0} to make your chat clean and clear."
-setting_10 : "⁉️ What is This?\n\n1) Group: Plays music in the group where the command is given .\n\n2) Channel: Plays music in the channel you want. Set channel id via /channelplay"
-setting_11 : "⁉️ What is This?\n\n1) Everyone: Anyone present in this group can play music here.\n\n2) Admin Only: Only admins can play the music in this group."
+setting_3 : ""
+setting_4 : ""
+setting_5 : ""
+setting_9 : ""
+setting_10 : ""
+setting_11 : ""
 setting_12 : "❌ You've no channel id defined for channel mode. Please define with /channelplay."
-setting_13 : "Can't change play mode in active group call. Please stop the voice chat first with /stop."
-setting_14 : "⁉️ What is This?\n\nWhen activated, Bot will delete its executed commands (/play, /pause, /shuffle, /stop etc) immediately.\n\nBot will be requiring delete messages admin right for this to work properly."
-setting_15 : "Failed to resolve peer, Make sure you have added bot in your channel and promoted it as admin.\n\nTry setting /channelplay again.."
-setting_16 : "⁉️ What is This?\n\nWhen activated, Bot will suggest your chat in every 1-2 hour about bot commands (How to use them, which are the commands and many other things) randomly."
+setting_13 : ""
+setting_14 : ""
+setting_15 : ""
+setting_16 : ""
 
 
-set_cb_1 : "Getting Audio Quality Panel..."
-set_cb_2 : "Getting Video Quality Panel..."
-set_cb_3 : "Getting Auth Users Panel..."
-set_cb_4 : "Getting Play Mode Panel..."
-set_cb_5 : "Getting Clean Mode Panel..."
-set_cb_6 : "Setting up changes."
-set_cb_7 : "Getting Auth Users List.. PLEASE WAIT."
-set_cb_8 : "Getting back.."
+set_cb_1 : ""
+set_cb_2 : ""
+set_cb_3 : ""
+set_cb_4 : ""
+set_cb_5 : ""
+set_cb_6 : ""
+set_cb_7 : ""
+set_cb_8 : ""
 
 # Misc
 ustats_1 : "No User Stats Found."
@@ -264,9 +264,9 @@ H_B_5 : "‹ امسح ›"
 H_B_6 : "‹ المنشئ ›"
 
 #PlayMode
-PM_B_1 : "DirectPlay"
-PM_B_2 : "InlineMarkup"
-PM_B_3 : "ChannelPlay"
+PM_B_1 : ""
+PM_B_2 : ""
+PM_B_3 : ""
 
 #Play
 P_B_1 : "‹ صوت فقط ›"
@@ -338,13 +338,13 @@ QU_B_2 : ""
 # Sudo Users [ If you are translating this to some other language .. you can leave all these strings in english language]
 
 #Sudo
-sudo_1 : "{0} is already a sudo user."
-sudo_2 : "Added **{0}** to Sudo Users." 
-sudo_3 : "Not a part of Bot's Sudo."
-sudo_4 : "Removed from Bot's Sudo User"
-sudo_5 : "⭐️<u> **Owners:**</u>\n"
-sudo_6 : "\n⭐️<u> **Sudo Users:**</u>\n"
-sudo_7 : "No Sudo Users"
+sudo_1 : "‹ تم رفعة مطور سابقآ ›"
+sudo_2 : "‹ تم إضافة الأخ {0} الى المطورين ›" 
+sudo_3 : "‹ لا يوجد مطورين في البوت ›"
+sudo_4 : "‹ تم إزالته من المطورين بنجاح ›"
+sudo_5 : "‹ المنشئ ›\n"
+sudo_6 : "‹ قائمة المطورين ›"
+sudo_7 : "‹ لا يوجد مطورين ›"
 
 #Block
 block_1 : ""
