--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -26,26 +26,26 @@ call_10 : "Downloading Next Track from Playlist"
 call_11 : "Please add @{0} to your channel[ ID: {1}].\n\nBot is not able to get channel details."
 
 # PLUGINS - Auth.py
-auth_1 : "You can only have 20 Users in your group's Authorised Users List (AUL)"
-auth_2 : "Added to Authorised Users List of your group."
-auth_3 : "Already in the Authorised Users List."
-auth_4 : "Removed from Authorised Users List of this Group."
-auth_5 : "Targeted user is not an Authorised User."
-auth_6 : "Fetching Authorised Users... Please Wait"
-auth_7 : "**Authorised Users List[AUL]:**\n\n"
-auth_8 : "┗ Added By:-"
+auth_1 : ""
+auth_2 : ""
+auth_3 : ""
+auth_4 : ""
+auth_5 : ""
+auth_6 : ""
+auth_7 : ""
+auth_8 : ""
 
 # PLUGINS - Admins
-admin_1 : "Music is already Paused."
-admin_2 : "🎧 Voicechat Paused by {}!"
-admin_3 : "Music is already resumed."
-admin_4 : "🎧 Voicechat Resumed by {}!"
-admin_5 : "Music is already muted."
-admin_6 : "🎧 Voicechat Muted by {}!"
-admin_7 : "Music is already unmuted."
-admin_8 : "🎧 Voicechat Unmuted by {}!"
-admin_9 : "🎧 Voicechat End/Stopped by {}!"
-admin_10 : "🎧 Voicechat Skipped by {}!. No More Music in Queue."
+admin_1 : "‹ بالفعل تم الإيقاف مؤقتا ›"
+admin_2 : "‹ تم ايقاف الملف مؤقتا ›"
+admin_3 : "‹ تم تشغيل الملف بالفغل ›"
+admin_4 : "‹ تم تشغيل الملف الصوتي ›"
+admin_5 : "‹ بالفعل تم كتم الحساب ›"
+admin_6 : "‹ تم كتم الحساب ›"
+admin_7 : "‹ بالفعل تم إلغاء الكتم ›"
+admin_8 : "‹ تم إلغاء الكتم ›"
+admin_9 : "‹ تم الإيقاف ›"
+admin_10 : "‹ لايوجد شي في قائمة التشغيل ، تم عمل سكب تلقائيا ›"
 admin_11 : "Error while changing stream to **{0}**\n\nPlease use /skip again."
 admin_12 : "Unable to skip to a specific track because of enabled loop play. Please disable loop play via `/loop disable` to use this feature."
 admin_13 : "Please use numeric numbers for specific tracks, like 1, 2 or 4 etc"
@@ -111,20 +111,20 @@ set_cb_7 : ""
 set_cb_8 : ""
 
 # Misc
-ustats_1 : "No User Stats Found."
-ustats_2 : "Greetings!, You have played **{0}** tracks till now with a whopping count of **{1}** times.\n\nTop {2} played by you:\n\n"
+ustats_1 : ""
+ustats_2 : ""
 
-gstats_1 : "Getting Global Stats, This could take some time..."
-gstats_2 : "No Stats Found."
-gstats_3 : "Getting Global Top 10 {0} on the bot, This could take some time.."
-gstats_4 : "**Total Queries on Bot:** {0}\n\n{1} has played **{2}** tracks till now with a whopping count of **{3}** times.\n\n**Top {4} Tracks:**\n"
-gstats_5 : "**Top {0} Chats of {1}:**\n\n"
-gstats_6 : "**Top {0} Users of {1}:**\n\n"
-gstats_7 : "This chat group has played **{0}** tracks till now with a whopping count of **{1}** times.\n\nTop {2} played by this chat group:\n\n"
-gstats_8 : "Getting Bot's general stats and information.. This could take some time..."
-gstats_9 : "**GLOBAL TOP 10 STATS OF THE BOT**\n\nSelect the buttons from below for which you want to check global stats from bot's servers."
-gstats_10 : "**Global Stats of {0}**\n\nSelect the buttons from below for which you want to check global stats from bot's servers."
-gstats_11 : "**General Stats of {0}**\nSelect the buttons from below for which you want to check global stats from bot's servers.\n\nTo check top tracks, chats, users and other stuffs, please use /gstats"
+gstats_1 : ""
+gstats_2 : ""
+gstats_3 : ""
+gstats_4 : ""
+gstats_5 : ""
+gstats_6 : ""
+gstats_7 : ""
+gstats_8 : ""
+gstats_9 : ""
+gstats_10 : ""
+gstats_11 : ""
 
 
 # Play 
