--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -1,16 +1,16 @@
 name : 🏴󠁧󠁢󠁥󠁮󠁧󠁿 English
 
 # General Strings
-general_1 : "Reply to a user's message or give username/user_id."
-general_2 : "Error! Wrong Usage of Command."
+general_1 : ""
+general_2 : ""
 general_3 : "‹ تم تشغيل الملف الصوتي بنجاح ›"
-general_4 : "You're an anonymous admin in this chat group!\nRevert back to User Account From Admin Rights."
-general_5 : "You need to be admin with manage voice chat rights to perform this action."
-general_6 : "Bot isn't streaming on voice chat."
+general_4 : "‹ انت مستخدم مجهول ›"
+general_5 : "‹ يلزم صلاحيات الدردشة الصوتية والحذف ، حتى تستطيع استخدام الأمر ›"
+general_6 : "‹ لايوجد شي في الاتصال ›"
 
 # Classes - Telegram.py
-tg_1 : "Bot is **overloaded** with downloads right now.\n\n**Try After:** {0} (__expected time__)"
-tg_2 : "Failed to download the media from telegram."
+tg_1 : ""
+tg_2 : ""
 
 # Core - Call.py
 call_1 : "Bot requires **Admin** Permission to invite assistant account to your channel."
