--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -209,14 +209,14 @@ ping_2 : "{0}` مللي ثانية ."
 
 
 # Song
-song_1 : ""
+song_1 : "‹ لضمان الجودة ، التنزيل يعمل داخل البوت فقط ›"
 song_2 : "‹ اكتب يوت وأسم الملف لتنزيلة ›"
 song_3 : ""
-song_4 : "‹ اختر جودة التنزيل ›"
+song_4 : "‹ اضغط على صوت واختر جودة التنزيل ›"
 song_5 : "‹ الرابط غير صالح ›"
 song_6 : ""
 song_7 : ""
-song_8 : "‹ يتم الرفع ›"
+song_8 : "‹ يتم ارسال الملف الصوتي ›"
 song_9 : ""
 song_10 : ""
 song_11 : ""
