--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -13,17 +13,17 @@ tg_1 : ""
 tg_2 : ""
 
 # Core - Call.py
-call_1 : "Bot requires **Admin** Permission to invite assistant account to your channel."
-call_2 : "Assistant is banned in your group or channel, please unban.\n\n**Assistant Username:** @{0}\n**Assistant ID:** {1}"
-call_3 : "Exception Occured While Inviting Assistant Account to your chat.\n\n**Reason**: {0}"
-call_4 : "Bot requires **Invite Users Via Link** Permission to invite assistant account to your chat group."
-call_5 : "Assistant Account will be joining in 5 Seconds..Please Wait!"
-call_6 : "Assistant Account[{0}] Joined Successfully.\n\nStarting Music Now"
-call_7 : "**Harmful Admin Right Given **\n\nPlease remove **BAN USERS** rights from the bot."
-call_8 : "**Harmful Admin Right Given **\n\nPlease remove **ADD NEW ADMINS** rights from the bot."
-call_9 : "**Failed to switch Stream**\nPlease use /skip to change track again."
-call_10 : "Downloading Next Track from Playlist"
-call_11 : "Please add @{0} to your channel[ ID: {1}].\n\nBot is not able to get channel details."
+call_1 : "‹ ارفع البوت مشرف وانطي صلاحيات ›"
+call_2 : "‹ حساب المساعد محظور عليك رفع الحظر منه واضافتة ، هذا هو يوزر حساب المساعد @{0} ›"
+call_3 : "‹ حدث خطا اثناء دعوة المساعد والخطا هو {0}"
+call_4 : "‹ حدث خطا يجب اعطاء صلاحية اصافة مستخدمين الى البوت ›"
+call_5 : ""
+call_6 : "‹ تم التشغيل ›"
+call_7 : ""
+call_8 : ""
+call_9 : ""
+call_10 : ""
+call_11 : "‹ عليك اضافة حساب المساعد @{1} الى القناة ، البوت غير قادر على إضافتة ›"
 
 # PLUGINS - Auth.py
 auth_1 : ""
