--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -17,7 +17,7 @@ call_1 : "‹ ارفع البوت مشرف وانطي صلاحيات ›"
 call_2 : "‹ حساب المساعد محظور عليك رفع الحظر منه واضافتة ، هذا هو يوزر حساب المساعد @{0} ›"
 call_3 : "‹ حدث خطا اثناء دعوة المساعد والخطا هو {0}"
 call_4 : "‹ حدث خطا يجب اعطاء صلاحية اصافة مستخدمين الى البوت ›"
-call_5 : ""
+call_5 : "‹ تم انضمام المساعد ›"
 call_6 : "‹ تم التشغيل ›"
 call_7 : ""
 call_8 : ""
