--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -407,7 +407,7 @@ heroku_9 : ""
 heroku_10 : ""
 heroku_11 : ""
 heroku_12 : ""
-heroku_13 : ""
+heroku_13 : "‹ جار التحقق من وجود تحديث او لا ›"
 heroku_14 : ""
 heroku_15 : ""
 
