--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -83,7 +83,7 @@ start_6 : "❗️ **Supergroup Needed** ❗️\n\nPlease convert your **group** 
 start_7 : "**Blacklisted Chat**\n\nYou're chat has been blacklisted by the Bot. Please ask any SudoUser to whitelist chat first. Check [Sudolist from here]({0})"
 
 # Help
-help_1 : "‹ قائمة تحكم الأزرار  ›\n \n ‹ التحكم الأساسي ›"
+help_1 : "‹ هنا يمكنك التحكم في الأزرار ›\n\n‹ لاتتردد في مراسلة المطور للمساعدة ›"
 help_2 : "‹ اضغط للمساعدة ›"
 
 # Settings
