--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -54,9 +54,9 @@ admin_14 : "Atleast 2 tracks needed in queue to skip to a specific number. Check
 admin_15 : "Not enough tracks in queue for the value given by you. Please choose numbers between 1 and {0}"
 admin_16 : "Failed to skip to specific track.\n\nCheck left queue by /queue"
 admin_17 : "{0}.. Please Wait"
-admin_18 : "Admin List Not Found\n\nPlease reload adminlist via /admincache or /reload"
-admin_19 : "You need to be admin with manage voice chat rights to perform this.\nIf you're already admin, reload admincache via /admincache "
-admin_20 : "Admin cache reloaded successfully."
+admin_18 : "‹ للتأكد اكثر من انك مشرف اكتب تحديث ›"
+admin_19 : "‹ للتأكد اكثر من انك مشرف اكتب تحديث بعدها تستطيع استخدام الاوامر › "
+admin_20 : "‹ تم التحديث ›."
 admin_21 : "Nothing inside queue to shuffle"
 admin_22 : "Failed to shuffle.\n\nCheck queue : /queue"
 admin_23 : "**Queue Shuffled by {0}**\n\nCheck shuffled queue : /queue"
