--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -48,7 +48,7 @@ admin_8 : "‹ تم إلغاء الكتم ›"
 admin_9 : "‹ تم إيقاف التشغيل نهائياً ›"
 admin_10 : "‹ لايوجد شي في قائمة التشغيل ، تم عمل سكب تلقائيا ›"
 admin_11 : "‹ اعتقد هنالك مشكلة في {0} ، استخدم امر سكب الأمر البديل ›"
-admin_12 : "‹ البوت لايستطيع التخطي بسرعة الى مسار معين بسبب التشغيل المتكرر ›"
+admin_12 : "‹ البوت لايستطيع التخطي بسرعة الى مسار معين لانك قمت بتفعيل الوضع التلقائي ›"
 admin_13 : "‹ استخدم ارقام محددة للتخطي مثلا 1 او 2 ›"
 admin_14 : "‹ مطلوب مسارين اقل شي في الطابور حتى تكدر تنتقل من رقم إلى رقم محدد ›"
 admin_15 : "‹ اعتقد هنالك مشكلة في {0} ، استخدم امر سكب الأمر البديل ›"
