--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -206,7 +206,7 @@ lyrics_4 : "Click on the button below and get searched lyrics to avoid long spam
 
 #Ping
 ping_1 : "‹ البنك ›"
-ping_2 : "{0}` مللي ثانية ."
+ping_2 : "{6}` مللي ثانية ."
 
 
 # Song
@@ -265,15 +265,15 @@ H_B_5 : "‹ امسح ›"
 H_B_6 : "‹ المنشئ ›"
 
 #PlayMode
-PM_B_1 : ""
-PM_B_2 : ""
-PM_B_3 : ""
+PM_B_1 : "DirectPlay"
+PM_B_2 : "InlineMarkup"
+PM_B_3 : "ChannelPlay
 
 #Play
-P_B_1 : "‹ صوت فقط ›"
-P_B_2 : ""
-P_B_3 : "‹ بث مباشر ›"
-P_B_4 : ""
+P_B_1 : "🎵 Play Audio"
+P_B_2 : "🎥 Play Video"
+P_B_3 : "🏮 Start Live Stream"
+P_B_4 : "🎵 Play Playlist"
 
 #Playlist
 PL_B_1 : ""
@@ -348,85 +348,85 @@ sudo_6 : "‹ قائمة المطورين ›"
 sudo_7 : "‹ لا يوجد مطورين ›"
 
 #Block
-block_1 : ""
-block_2 : ""
-block_3 : ""
-block_5 : ""
-block_6 : ""
-block_7 : ""
+block_1 : "{0} is already blocked from the bot."
+block_2 : "Added **{0}** to Block List of bot. User won't be able to use bot now under any condition.\n\nCheck blocked users: /blockedusers"
+block_3 : "User is already free and not blocked."
+block_4 : "Removed User from the block list. User will be able to use bot now."
+block_5 : "No Blocked Users Found"
+block_6 : "Getting Blocked Users List.. Please Wait"
+block_7 : "**Blocked Users:**\n\n"
 
 #Blacklist Chats
-black_1 : ""
-black_2 : ""
-black_3 : ""
-black_4 : ""
-black_5 : ""
-black_6 : ""
-black_7 : ""
-black_8 : ""
+black_1 : "**Usage:**\n/blacklistchat [CHAT_ID]"
+black_2 : "Chat is already blacklisted."
+black_3 : "Chat has been successfully blacklisted"
+black_4 : "**Usage:**\n/whitelistchat [CHAT_ID]"
+black_5 : "Chat is already whitelisted."
+black_6 : "Chat has been successfully whitelisted"
+black_7 : "**Blacklisted Chats:**\n\n"
+black_8 : "No Blacklisted Chats"
 
 #videolimit
-vid_1 : ""
-vid_2 : ""
-vid_3 : ""
-vid_4 : ""
+vid_1 : "**Usage:**\n/set_video_limit [Number of chats allowed] or [Disable]"
+vid_2 : "Please Use Numeric Numbers for Setting Limit."
+vid_3 : "Video Calls Maximum Limit Defined to {0} Chats."
+vid_4 : "Video Calls Disabled"
 
 #maintenance
-maint_1 : ""
-maint_2 : ""
-maint_3 : ""
+maint_1 : "**Usage:**\n/maintenance [enable|disable]"
+maint_2 : "Enabled for Maintenance"
+maint_3 : "Maintenance Mode Disabled"
 
 #log
-log_1 : ""
-log_2 : ""
-log_3 : ""
+log_1 : "**Usage:**\n/logger [enable|disable]"
+log_2 : "Enabled Logging"
+log_3 : "Logging Disabled"
 
 #videomode
-vidmode_1 : ""
-vidmode_2 : ""
-vidmode_3 : ""
+vidmode_1 : "**Usage:**\n/videomode [download|m3u8]"
+vidmode_2 : "Video Play Mode set as downloader. Bot will be downloading tracks now."
+vidmode_3 : "Video Play Mode set as m3u8. Bot will be play tracks live now."
 
 #broadcast
-broad_1 : ""
-broad_2 : ""
-broad_3 : ""
-broad_4 : ""
-broad_5 : ""
-broad_6 : ""
-broad_7 : ""
+broad_1 : "**Broadcasted Message In {0}  Chats with {1} Pins from Bot.**"
+broad_2 : "Started Assistant Broadcast..."
+broad_3 : "**Assistant Broadcast:**\n\n"
+broad_4 : "Assistant {0} Broadcasted in {1} chats\n"
+broad_5 : "**Usage**:\n/broadcast [MESSAGE] or [Reply to a Message]"
+broad_6 : "Please provide some text to broadcast."
+broad_7 : "**Broadcasted Message to {0} Users.**"
 
 #Heroku
-heroku_1 : ""
-heroku_2 : ""
-heroku_3 : ""
-heroku_4 : ""
-heroku_5 : ""
-heroku_6 : ""
-heroku_7 : ""
-heroku_8 : ""
-heroku_9 : ""
-heroku_10 : ""
-heroku_11 : ""
-heroku_12 : ""
-heroku_13 : "‹ جار التحقق من وجود تحديث او لا ›"
-heroku_14 : ""
-heroku_15 : ""
+heroku_1 : "Please make sure your Heroku API Key, Your App name are configured correctly in the heroku"
+heroku_2 : "You can only get logs of Heroku Apps"
+heroku_3 : "**Usage:**\n/get_var [Var Name]"
+heroku_4 : "Unable to find any such var."
+heroku_5 : ".env file not found."
+heroku_6 : "**Usage:**\n/del_var [Var Name]"
+heroku_7 : "{0} Deleted."
+heroku_8 : "**Usage:**\n/set_var [Var Name] [Var Value]"
+heroku_9 : "{0} has been updated successfully"
+heroku_10 : "{0} has been added successfully"
+heroku_11 : "Only for Heroku Apps"
+heroku_12 : "Checking Heroku Usage. Please Wait"
+heroku_13 : "Checking for available updates..."
+heroku_14 : "Git Command Error"
+heroku_15 : "Invalid Git Repsitory"
 
 #Private bot mode
-pbot_1 : ""
-pbot_2 : ""
-pbot_3 : ""
-pbot_4 : ""
-pbot_5 : ""
-pbot_6 : ""
-pbot_7 : ""
-pbot_8 : ""
-pbot_9 : ""
-pbot_10 : ""
-pbot_11 : ""
-pbot_12 : ""
-pbot_13 : ""
-
+pbot_1 : "**Usage:**\n/authorize [CHAT_ID]"
+pbot_2 :  "**Usage:**\n/unauthorize [CHAT_ID]"
+pbot_3 : "Added given chat to authorized list"
+pbot_4 : "Removed given chat from authorized list"
+pbot_5 : "Chat is already in the authorized list"
+pbot_6 : "No such chat exists in the authorized list"
+pbot_7 : "Failed to verify chat_id.\n\nMake sure its numeric and in correct format. Don't use chat username or links."
+pbot_8 : "Please wait.... Fetching Authorized chats."
+pbot_9 : "**<b>Fetched Chats:</b>**\n\n"
+pbot_10 : "Private Chat"
+pbot_11 : "No Authorized chats found"
+pbot_12 : "Private Bot Mode is disabled.\n\nTo use your bot as private bot make sure to set **PRIVATE_BOT_MODE** = **True**"
+pbot_13 : "\n**<b>Unfetched Chats:</b>**\n\n"
 
 #Gbanned
 gban_1 : ""
