--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -270,11 +270,10 @@ PM_B_2 : "InlineMarkup"
 PM_B_3 : "ChannelPlay
 
 #Play
-
-P_B_1 : "🎵 Play Audio"
-P_B_2 : "🎥 Play Video"
-P_B_3 : "🏮 Start Live Stream"
-P_B_4 : "🎵 Play Playlist"
+P_B_1 : " Play Audio"
+P_B_2 : "Play Video"
+P_B_3 : "Start Live Stream"
+P_B_4 : "Play Playlist"
 
 #Playlist
 PL_B_1 : ""
