--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -273,15 +273,7 @@ PM_B_1 : "DirectPlay"
 PM_B_2 : "InlineMarkup"
 PM_B_3 : "ChannelPlay
 
-#Playlist
-PL_B_4 : "📡 Play Mode"
-PL_B_5 : "🔄 Del Whole Playlist"
-PL_B_6 : "↗️ Delete Playlist"
-PL_B_7 : "❗️ Yes, I'm sure. Delete it"
-PL_B_8 : "🔢 Play Top 10"
-PL_B_9 : "🤖 Play Global Top 10 Tracks"
-PL_B_10 : "🏘 Play Group's Top 10 Tracks"
-PL_B_11 : "👤 Play Personal Top 10 Tracks"
+# # # $
 
 #Settings
 ST_B_1 : "🔊 Aud Quality"
@@ -480,3 +472,16 @@ sug_24 : ""
 sug_25 : ""
 sug_26 : ""
 sug_27 : ""
+
+#Playlist
+PL_B_1 : ""
+PL_B_2 : ""
+PL_B_3 : "‹ التحكم ›"
+PL_B_4 : "📡 Play Mode"
+PL_B_5 : "🔄 Del Whole Playlist"
+PL_B_6 : "↗️ Delete Playlist"
+PL_B_7 : "❗️ Yes, I'm sure. Delete it"
+PL_B_8 : "🔢 Play Top 10"
+PL_B_9 : "🤖 Play Global Top 10 Tracks"
+PL_B_10 : "🏘 Play Group's Top 10 Tracks"
+PL_B_11 : "👤 Play Personal Top 10 Tracks"
