--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -273,33 +273,7 @@ PM_B_1 : "DirectPlay"
 PM_B_2 : "InlineMarkup"
 PM_B_3 : "ChannelPlay
 
-# ST_B_1 : "🔊 Aud Quality"
-ST_B_2 : "🎥 Vid Quality"
-ST_B_3 : "🎩 Auth Users"
-ST_B_4 : "📱 Dashboard"
-ST_B_5 : "▶️ Play Mode"
-ST_B_6 : "🏳️‍🌈 Language"
-ST_B_7 : "🔄 Clean Mode"
-ST_B_8 : "{0} Low Quality Audio"
-ST_B_9 : "{0} Medium Quality Audio"
-ST_B_10 : "{0} High Quality Audio"
-ST_B_11 : "{0} Low Quality Video"
-ST_B_12 : "{0} Medium Quality Video"
-ST_B_13 : "{0} High Quality Video"
-ST_B_14 : "✅ Enabled"
-ST_B_15 : "❌ Disabled"
-ST_B_16 : "👤 Admins"
-ST_B_17 : "👥 Everyone"
-ST_B_18 : "📋 Authorized Users Lists"
-ST_B_19 : "🔎 Search Mode"
-ST_B_20 : "✅ Direct"
-ST_B_21 : "✅ Inline"
-ST_B_22 : "👨‍⚖️ Admin Commands"
-ST_B_23 : "🏘 Group"
-ST_B_24 : "🏷 Channel"
-ST_B_25 : "🫂 Play Type"
-ST_B_26 : "🗑 Command Clean"
-ST_B_27 : "🧑‍🚀 Suggestion Mode"
+
 
 #Song
 SG_B_1 : "↗️ Open Private Chat"
@@ -482,3 +456,32 @@ PL_B_8 : "🔢 Play Top 10"
 PL_B_9 : "🤖 Play Global Top 10 Tracks"
 PL_B_10 : "🏘 Play Group's Top 10 Tracks"
 PL_B_11 : "👤 Play Personal Top 10 Tracks"
+
+
+ST_B_1 : "🔊 Aud Quality"
+ST_B_2 : "🎥 Vid Quality"
+ST_B_3 : "🎩 Auth Users"
+ST_B_4 : "📱 Dashboard"
+ST_B_5 : "▶️ Play Mode"
+ST_B_6 : "🏳️‍🌈 Language"
+ST_B_7 : "🔄 Clean Mode"
+ST_B_8 : "{0} Low Quality Audio"
+ST_B_9 : "{0} Medium Quality Audio"
+ST_B_10 : "{0} High Quality Audio"
+ST_B_11 : "{0} Low Quality Video"
+ST_B_12 : "{0} Medium Quality Video"
+ST_B_13 : "{0} High Quality Video"
+ST_B_14 : "✅ Enabled"
+ST_B_15 : "❌ Disabled"
+ST_B_16 : "👤 Admins"
+ST_B_17 : "👥 Everyone"
+ST_B_18 : "📋 Authorized Users Lists"
+ST_B_19 : "🔎 Search Mode"
+ST_B_20 : "✅ Direct"
+ST_B_21 : "✅ Inline"
+ST_B_22 : "👨‍⚖️ Admin Commands"
+ST_B_23 : "🏘 Group"
+ST_B_24 : "🏷 Channel"
+ST_B_25 : "🫂 Play Type"
+ST_B_26 : "🗑 Command Clean"
+ST_B_27 : "🧑‍🚀 Suggestion Mode"
