--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -72,6 +72,8 @@ admin_32 : "Please Wait... Seeking ongoing stream."
 admin_33 : "Successfully Seeked Stream to {0} Mins"
 admin_34 : "Failed to seek the current stream."
 
+# Bot 
+
 # Start
 start_1 : "Thanks for having me in {0}.\n{1} is alive.\n\nFor any assistance or help, checkout our support group and channel."
 start_2 : "‹ بوت تشغيل الملفات في المحادثات والقنوات الصوتية ›\n\n‹ الازرار المتاحة في الأسفل ›"
@@ -127,10 +129,6 @@ gstats_11 : ""
 
 
 # Play 
-P_B_1 : "Play Audio"
-P_B_2 : "Play Video"
-P_B_3 : "Start Live Stream"
-P_B_4 : "Play Playlist"
 
 #Play Callback 
 playcb_1 : "- لتبعبص بشي مالك علاقة بي ."
@@ -269,11 +267,85 @@ H_B_6 : "‹ المنشئ ›"
 #PlayMode
 PM_B_1 : "DirectPlay"
 PM_B_2 : "InlineMarkup"
-PM_B_3 : "ChannelPlay
+PM_B_3 : "ChannelPlay"
 
+#Play
+P_B_1 : "🎵 Play Audio"
+P_B_2 : "🎥 Play Video"
+P_B_3 : "🏮 Start Live Stream"
+P_B_4 : "🎵 Play Playlist"
 
+#Playlist
+PL_B_1 : ""
+PL_B_2 : ""
+PL_B_3 : "‹ التحكم ›"
+PL_B_4 : "📡 Play Mode"
+PL_B_5 : "🔄 Del Whole Playlist"
+PL_B_6 : "↗️ Delete Playlist"
+PL_B_7 : "❗️ Yes, I'm sure. Delete it
+PL_B_8 : ""
+PL_B_9 : ""
+PL_B_10 : ""
+PL_B_11 : ""
 
+#Settings
+ST_B_1 : ""
+ST_B_2 : ""
+ST_B_3 : ""
+ST_B_4 : ""
+ST_B_5 : ""
+ST_B_6 : ""
+ST_B_7 : ""
+ST_B_8 : ""
+ST_B_9 : ""
+ST_B_10 : ""
+ST_B_11 : ""
+ST_B_12 : ""
+ST_B_13 : ""
+ST_B_14 : ""
+ST_B_15 : ""
+ST_B_16 : ""
+ST_B_17 : ""
+ST_B_18 : ""
+ST_B_19 : ""
+ST_B_20 : ""
+ST_B_21 : ""
+ST_B_22 : ""
+ST_B_23 : ""
+ST_B_24 : ""
+ST_B_25 : ""
+ST_B_26 : ""
+ST_B_27 : ""
 
+#Song
+SG_B_1 : "‹ التنزيل داخل البوت فقط ›"
+SG_B_2 : "‹ صوت ›"
+SG_B_3 : ""
+
+#Stats
+SA_B_1 : ""
+SA_B_2 : ""
+SA_B_3 : ""
+SA_B_4 : ""
+SA_B_5 : ""
+SA_B_6 : ""
+SA_B_7 : ""
+SA_B_8 : ""
+
+#Queue
+QU_B_1 : ""
+QU_B_2 : ""
+
+# Sudo Users [ If you are translating this to some other language .. you can leave all these strings in english language]
+
+#Sudo
+sudo_1 : "‹ تم رفعة مطور سابقآ ›"
+sudo_2 : "‹ تم إضافة الأخ {0} الى المطورين ›" 
+sudo_3 : "‹ لا يوجد مطورين في البوت ›"
+sudo_4 : "‹ تم إزالته من المطورين بنجاح ›"
+sudo_5 : "‹ المنشئ ›\n"
+sudo_6 : "‹ قائمة المطورين ›"
+sudo_7 : "‹ لا يوجد مطورين ›"
 
 #Block
 block_1 : "{0} is already blocked from the bot."
@@ -356,20 +428,6 @@ pbot_11 : "No Authorized chats found"
 pbot_12 : "Private Bot Mode is disabled.\n\nTo use your bot as private bot make sure to set **PRIVATE_BOT_MODE** = **True**"
 pbot_13 : "\n**<b>Unfetched Chats:</b>**\n\n"
 
-
-#Gbanned
-gban_1 : "You want to gban yourself? How Fool!"
-gban_2 : "Should i block myself? Lol"
-gban_3 : "You want to block a sudo user?"
-gban_4 : "{0} is already **gbanned** from the bot."
-gban_5 : "**Initializing Global Ban on {0}**\n\nExpected Time : {1}."
-gban_6 : "**Gbanned Successfully**\n\nBanned **{0}** from **{1}** chats."
-gban_7 : "{0} is not **gbanned **yet from the bot."
-gban_8 : "**Ungbanning {0}**\n\nExpected Time : {1}."
-gban_9 : "**UnGbanned Successfully**\n\nUnbanned **{0}** in **{1}** chats."
-gban_10 : "No Gbanned Users Found."
-gban_11 : "Please wait a while.. Fetching Gbanned users list"
-
 #Gbanned
 gban_1 : ""
 gban_2 : ""
@@ -412,75 +470,3 @@ sug_24 : ""
 sug_25 : ""
 sug_26 : ""
 sug_27 : ""
-
-#Playlist
-PL_B_1 : ""
-PL_B_2 : ""
-PL_B_3 : "‹ التحكم ›"
-PL_B_4 : "📡 Play Mode"
-PL_B_5 : "🔄 Del Whole Playlist"
-PL_B_6 : "↗️ Delete Playlist"
-PL_B_7 : "❗️ Yes, I'm sure. Delete it"
-PL_B_8 : "🔢 Play Top 10"
-PL_B_9 : "🤖 Play Global Top 10 Tracks"
-PL_B_10 : "🏘 Play Group's Top 10 Tracks"
-PL_B_11 : "👤 Play Personal Top 10 Tracks"
-
-
-ST_B_1 : "🔊 Aud Quality"
-ST_B_2 : "🎥 Vid Quality"
-ST_B_3 : "🎩 Auth Users"
-ST_B_4 : "📱 Dashboard"
-ST_B_5 : "▶️ Play Mode"
-ST_B_6 : "🏳️‍🌈 Language"
-ST_B_7 : "🔄 Clean Mode"
-ST_B_8 : "{0} Low Quality Audio"
-ST_B_9 : "{0} Medium Quality Audio"
-ST_B_10 : "{0} High Quality Audio"
-ST_B_11 : "{0} Low Quality Video"
-ST_B_12 : "{0} Medium Quality Video"
-ST_B_13 : "{0} High Quality Video"
-ST_B_14 : "✅ Enabled"
-ST_B_15 : "❌ Disabled"
-ST_B_16 : "👤 Admins"
-ST_B_17 : "👥 Everyone"
-ST_B_18 : "📋 Authorized Users Lists"
-ST_B_19 : "🔎 Search Mode"
-ST_B_20 : "✅ Direct"
-ST_B_21 : "✅ Inline"
-ST_B_22 : "👨‍⚖️ Admin Commands"
-ST_B_23 : "🏘 Group"
-ST_B_24 : "🏷 Channel"
-ST_B_25 : "🫂 Play Type"
-ST_B_26 : "🗑 Command Clean"
-ST_B_27 : "🧑‍🚀 Suggestion Mode"
-
-#Song
-Sg_b_1 : "↗️ Open Private Chat"
-Sg_b_2 : "🔊 Audio"
-Sg_b_3 : "🎥 Video"
-
-
-#Stats
-SA_B_1 : "📢 Top 10 Chat"
-SA_B_2 : "🔢 Top 10 Tracks"
-SA_B_3 : "🧛 Top 10 Users"
-SA_B_4 : "🏷 Top 10 Here"
-SA_B_5 : "💡 Overall Stats"
-SA_B_6 : "👤 User Stats"
-SA_B_7 : "🔢 Global Top 10 Stats"
-SA_B_8 : "🤖 Bot Stats"
-
-
-#Queue
-QU_B_1 : "📑 Queued List"
-QU_B_2 : "Played {0} out of {1} Mins"
-
-#Sudo
-sudo_1 : "‹ تم رفعة مطور سابقآ ›"
-sudo_2 : "‹ تم إضافة الأخ {0} الى المطورين ›" 
-sudo_3 : "‹ لا يوجد مطورين في البوت ›"
-sudo_4 : "‹ تم إزالته من المطورين بنجاح ›"
-sudo_5 : "‹ المنشئ ›\n"
-sudo_6 : "‹ قائمة المطورين ›"
-sudo_7 : "‹ لا يوجد مطورين ›"
