--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -282,7 +282,7 @@ PL_B_3 : "‹ التحكم ›"
 PL_B_4 : "📡 Play Mode"
 PL_B_5 : "🔄 Del Whole Playlist"
 PL_B_6 : "↗️ Delete Playlist"
-PL_B_7 : "❗️ Yes, I'm sure. Delete it
+PL_B_7 : "❗️ Yes, I'm sure. Delete it"
 PL_B_8 : ""
 PL_B_9 : ""
 PL_B_10 : ""
