--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -18,7 +18,7 @@ call_1 : "‹ انطي صلاحية اضافة المستخدمين للبوت  
 call_2 : "‹ حساب المساعد محظور يرجى رفع الحظر عن الحساب @{0} ›"
 call_3 : "‹ حدث خطأ اثناء دعوة المساعد والسبب {0} ›"
 call_4 : "‹ انطي صلاحية اضافة مستخدمين للبوت اولا ›"
-call_5 : "‹ تم ارسال دعوة لحساب المساعد للإنضمام هنا ›"
+call_5 : ""
 call_6 : "‹ تم الأنضمام ، تم التشغيل بنجاح ›"
 call_7 : "‹ وخر صلاحية حظر المستخدمين من البوت ›"
 call_8 : "‹ وخر صلاحية إضافة مشرفين من البوت ›"
@@ -279,10 +279,10 @@ P_B_4 : "🎵 Play Playlist"
 PL_B_1 : ""
 PL_B_2 : ""
 PL_B_3 : "‹ التحكم ›"
-PL_B_4 : "📡 Play Mode"
-PL_B_5 : "🔄 Del Whole Playlist"
-PL_B_6 : "↗️ Delete Playlist"
-PL_B_7 : "❗️ Yes, I'm sure. Delete it"
+PL_B_4 : ""
+PL_B_5 : ""
+PL_B_6 : ""
+PL_B_7 : ""
 PL_B_8 : ""
 PL_B_9 : ""
 PL_B_10 : ""
