--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -18,8 +18,8 @@ call_1 : "‹ انطي صلاحية اضافة المستخدمين للبوت  
 call_2 : "‹ حساب المساعد محظور يرجى رفع الحظر عن الحساب @{0} ›"
 call_3 : "‹ حدث خطأ اثناء دعوة المساعد والسبب {0} ›"
 call_4 : "‹ انطي صلاحية اضافة مستخدمين للبوت اولا ›"
-call_5 : ""
-call_6 : "‹ تم الأنضمام ، تم التشغيل بنجاح ›"
+call_5 : "- يتم التشغيل الان ."
+call_6 : "- يتم التشغيل الان ."
 call_7 : "‹ وخر صلاحية حظر المستخدمين من البوت ›"
 call_8 : "‹ وخر صلاحية إضافة مشرفين من البوت ›"
 call_9 : "‹ اعتقد هنالك مشكلة ، استخدم امر سكب الأمر البديل ›"
