--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -69,7 +69,7 @@ admin_29 : "‹ الرقم يكون من ال 1 الى 10 ›"
 admin_30 : "‹ لايمكن تقديم البث المباشر ›"
 admin_31 : "‹ الرقم يكون من ال 1 الى 10 مو كتلك ›"
 admin_32 : "‹ انتظر ›"
-admin_33 : "‹ تم التقديم بنجاح الدقيقة الان {0}  ›"
+admin_33 : "‹ تم بنجاح الدقيقة الان {0} ›"
 admin_34 : "‹ فشل التقديم اعد المحاولة ›"
 
 # Bot 
